src/mobile/Header.css
.shoka__header.mobile {
    position: fixed;
    top: 0;
    height: 2.5rem;
    background-color: #4d00f2;
    width: 100%;
    display: flex;
    padding-left: 10px;
    padding-right: 10px;
    z-index: 999;
    -webkit-text-fill-color: white;
    align-items: center;
    justify-content: center;
    border-bottom: 2px solid #EF22F550;
}

.nav_button {
    position: absolute;
    left: 10px;
}

.headerTitle {
    display: flex;
    width: auto;
    margin: auto;
    text-align: center;
    position: absolute;
}

/* Position and sizing of burger button */
.bm-burger-button {
    position: fixed;
    width: 24px;
    height: 20px;
    left: 24px;
    top: 20px;
  }
  
  /* Color/shape of burger icon bars */
  .bm-burger-bars {
    background: white;
  }
  
  /* Color/shape of burger icon bars on hover*/
  .bm-burger-bars-hover {
    background: #a90000;
  }
  
  /* Position and sizing of clickable cross button */
  .bm-cross-button {
    height: 24px;
    width: 24px;
  }
  
  /* Color/shape of close button cross */
  .bm-cross {
    background: #bdc3c7;
  }
  
  /*
  Sidebar wrapper styles
  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
  */
  .bm-menu-wrap {
    position: absolute;
    height: 100%;
  }
  
  /* General sidebar styles */
  .bm-menu {
    background: #373a47;
    padding: 2.5em 1.5em 0;
    font-size: 1.15em;
  }
  
  /* Morph shape necessary with bubble or elastic */
  .bm-morph-shape {
    fill: #373a47;
  }
  
  /* Wrapper for item list */
  .bm-item-list {
    color: #b8b7ad;
    padding: 0.8em;
  }
  
  /* Individual item */
  .bm-item {
    display: inline-block;
  }
  
  /* Styling of overlay */
  .bm-overlay {
    background: rgba(0, 0, 0, 0.3);
  }

